add public user registration, route authorization

--- a/src/main/resources/templates/product/index.html
+++ b/src/main/resources/templates/product/index.html
@@ -23,7 +23,10 @@
         </tr>
         </tbody>
     </table>
+
+    <h5 th:text="${userLogged}"></h5>
 </div>
+
 
 
 <script crossorigin="anonymous"
